--- a/template.yaml
+++ b/template.yaml
@@ -28,6 +28,9 @@ Metadata:
         Parameters:
           - ApplicationName
           - VpcCIDR
+          - ComprehendEntityScoreThreshold
+          - CognitoAllowedEmailDomains
+          - MecabLambdaLayerArn
       - Label:
           default: Twitter API Parameters
         Parameters:
@@ -83,7 +86,7 @@ Parameters:
     Default: 10.193.0.0/16
   ComprehendEntityScoreThreshold:
     Type: Number
-    Default: 0.7
+    Default: 0.8
     MaxValue: 1
     MinValue: 0
   CognitoAllowedEmailDomains:
