--- a/template.yaml
+++ b/template.yaml
@@ -633,18 +633,20 @@ Resources:
       SSESpecification: 
         SSEEnabled: true
 
-  SocialMediaGlueDB:
+  TweetsGlueDB:
     Type: "AWS::Glue::Database"
     Properties:
-      DatabaseInput:
-        Name: !Ref ApplicationName
       CatalogId: !Ref AWS::AccountId
+      DatabaseInput:
+        Name: tweets
 
-  tweets:
+  RawTweetsGlueTable:
     Type: "AWS::Glue::Table"
     Properties:
+      CatalogId: !Ref AWS::AccountId
+      DatabaseName: !Ref TweetsGlueDB
       TableInput:
-        Name: tweets
+        Name: raw
         StorageDescriptor:
           Compressed: False
           InputFormat: org.apache.hadoop.mapred.TextInputFormat
@@ -654,57 +656,55 @@ Resources:
           SerdeInfo:
             SerializationLibrary: org.openx.data.jsonserde.JsonSerDe
           Columns:
-          - Name: coordinates
-            Type: struct<type:string,coordinates:array<double>>
-          - Name: retweeted
-            Type: boolean
-          - Name: source
-            Type: string
-          - Name: entities
-            Type: struct<hashtags:array<struct<text:string,indices:array<bigint>>>,urls:array<struct<url:string,expanded_url:string,display_url:string,indices:array<bigint>>>>
-          - Name: reply_count
-            Type: bigint
-          - Name: favorite_count
-            Type: bigint
-          - Name: geo
-            Type: struct<type:string,coordinates:array<double>>
-          - Name: id_str
-            Type: string
-          - Name: timestamp_ms
-            Type: bigint
-          - Name: truncated
-            Type: boolean
-          - Name: text
-            Type: string
-          - Name: retweet_count
-            Type: bigint
-          - Name: id
-            Type: bigint
-          - Name: possibly_sensitive
-            Type: boolean
-          - Name: filter_level
-            Type: string
-          - Name: created_at
-            Type: string
-          - Name: place
-            Type: struct<id:string,url:string,place_type:string,name:string,full_name:string,country_code:string,country:string,bounding_box:struct<type:string,coordinates:array<array<array<float>>>>>
-          - Name: favorited
-            Type: boolean
-          - Name: lang
-            Type: string
-          - Name: in_reply_to_screen_name
-            Type: string
-          - Name: is_quote_status
-            Type: boolean
-          - Name: in_reply_to_user_id_str
-            Type: string
-          - Name: user
-            Type: struct<id:bigint,id_str:string,name:string,screen_name:string,location:string,url:string,description:string,translator_type:string,protected:boolean,verified:boolean,followers_count:bigint,friends_count:bigint,listed_count:bigint,favourites_count:bigint,statuses_count:bigint,created_at:string,utc_offset:bigint,time_zone:string,geo_enabled:boolean,lang:string,contributors_enabled:boolean,is_translator:boolean,profile_background_color:string,profile_background_image_url:string,profile_background_image_url_https:string,profile_background_tile:boolean,profile_link_color:string,profile_sidebar_border_color:string,profile_sidebar_fill_color:string,profile_text_color:string,profile_use_background_image:boolean,profile_image_url:string,profile_image_url_https:string,profile_banner_url:string,default_profile:boolean,default_profile_image:boolean>
-          - Name: quote_count
-            Type: bigint
+            - Name: coordinates
+              Type: struct<type:string,coordinates:array<double>>
+            - Name: retweeted
+              Type: boolean
+            - Name: source
+              Type: string
+            - Name: entities
+              Type: struct<hashtags:array<struct<text:string,indices:array<bigint>>>,urls:array<struct<url:string,expanded_url:string,display_url:string,indices:array<bigint>>>>
+            - Name: reply_count
+              Type: bigint
+            - Name: favorite_count
+              Type: bigint
+            - Name: geo
+              Type: struct<type:string,coordinates:array<double>>
+            - Name: id_str
+              Type: string
+            - Name: timestamp_ms
+              Type: bigint
+            - Name: truncated
+              Type: boolean
+            - Name: text
+              Type: string
+            - Name: retweet_count
+              Type: bigint
+            - Name: id
+              Type: bigint
+            - Name: possibly_sensitive
+              Type: boolean
+            - Name: filter_level
+              Type: string
+            - Name: created_at
+              Type: string
+            - Name: place
+              Type: struct<id:string,url:string,place_type:string,name:string,full_name:string,country_code:string,country:string,bounding_box:struct<type:string,coordinates:array<array<array<float>>>>>
+            - Name: favorited
+              Type: boolean
+            - Name: lang
+              Type: string
+            - Name: in_reply_to_screen_name
+              Type: string
+            - Name: is_quote_status
+              Type: boolean
+            - Name: in_reply_to_user_id_str
+              Type: string
+            - Name: user
+              Type: struct<id:bigint,id_str:string,name:string,screen_name:string,location:string,url:string,description:string,translator_type:string,protected:boolean,verified:boolean,followers_count:bigint,friends_count:bigint,listed_count:bigint,favourites_count:bigint,statuses_count:bigint,created_at:string,utc_offset:bigint,time_zone:string,geo_enabled:boolean,lang:string,contributors_enabled:boolean,is_translator:boolean,profile_background_color:string,profile_background_image_url:string,profile_background_image_url_https:string,profile_background_tile:boolean,profile_link_color:string,profile_sidebar_border_color:string,profile_sidebar_fill_color:string,profile_text_color:string,profile_use_background_image:boolean,profile_image_url:string,profile_image_url_https:string,profile_banner_url:string,default_profile:boolean,default_profile_image:boolean>
+            - Name: quote_count
+              Type: bigint
         Parameters: {'classification': 'json'}
-      DatabaseName: !Ref SocialMediaGlueDB
-      CatalogId: !Ref AWS::AccountId
 
   Elasticsearch:
     Type: AWS::Serverless::Application
