--- a/template.yaml
+++ b/template.yaml
@@ -408,7 +408,8 @@ Resources:
         BufferingHints:
           IntervalInSeconds: 300
           SizeInMBs: 10
-        Prefix: 'raw/'
+        Prefix: 'raw/year=!{timestamp:yyyy}/month=!{timestamp:MM}/day=!{timestamp:dd}/hour=!{timestamp:HH}/'
+        ErrorOutputPrefix: 'FirehoseFailures/!{firehose:error-output-type}/year=!{timestamp:yyyy}/month=!{timestamp:MM}/day=!{timestamp:dd}/hour=!{timestamp:HH}/'
         CompressionFormat: 'UNCOMPRESSED'
         RoleARN: !GetAtt ArchiveFirehoseRole.Arn
 
@@ -646,65 +647,124 @@ Resources:
       CatalogId: !Ref AWS::AccountId
       DatabaseName: !Ref TweetsGlueDB
       TableInput:
+        Description: 'https://developer.twitter.com/en/docs/tweets/data-dictionary/overview/tweet-object'
         Name: raw
+        TableType: EXTERNAL_TABLE
+        PartitionKeys:
+          - Name: year
+            Type: string
+          - Name: month
+            Type: string
+          - Name: day
+            Type: string
+          - Name: hour
+            Type: string
         StorageDescriptor:
-          Compressed: False
+          Location: !Sub 's3://${TweetsBucket}/raw'
           InputFormat: org.apache.hadoop.mapred.TextInputFormat
-          NumberOfBuckets: -1
           OutputFormat: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
-          Location: !Sub 's3://${TweetsBucket}/raw/'
+          Compressed: False
+          NumberOfBuckets: -1
           SerdeInfo:
             SerializationLibrary: org.openx.data.jsonserde.JsonSerDe
+            Parameters:
+              paths: 'created_at, id, id_str, text, source, truncated, is_quote_status, quote_count, reply_count, retweet_count, favorite_count, favorited, retweeted, possibly_sensitive, filter_level, lang, timestamp_ms'
+              serialization.format: 1
           Columns:
-            - Name: coordinates
-              Type: struct<type:string,coordinates:array<double>>
-            - Name: retweeted
-              Type: boolean
-            - Name: source
-              Type: string
-            - Name: entities
-              Type: struct<hashtags:array<struct<text:string,indices:array<bigint>>>,urls:array<struct<url:string,expanded_url:string,display_url:string,indices:array<bigint>>>>
-            - Name: reply_count
-              Type: bigint
-            - Name: favorite_count
-              Type: bigint
-            - Name: geo
-              Type: struct<type:string,coordinates:array<double>>
-            - Name: id_str
-              Type: string
-            - Name: timestamp_ms
-              Type: bigint
-            - Name: truncated
-              Type: boolean
-            - Name: text
-              Type: string
-            - Name: retweet_count
-              Type: bigint
-            - Name: id
-              Type: bigint
-            - Name: possibly_sensitive
-              Type: boolean
-            - Name: filter_level
-              Type: string
             - Name: created_at
               Type: string
-            - Name: place
-              Type: struct<id:string,url:string,place_type:string,name:string,full_name:string,country_code:string,country:string,bounding_box:struct<type:string,coordinates:array<array<array<float>>>>>
-            - Name: favorited
-              Type: boolean
-            - Name: lang
+              Comment: UTC time when this Tweet was created.
+            - Name: id
+              Type: bigint
+              Comment: The integer representation of the unique identifier for this Tweet. This number is greater than 53 bits and some programming languages may have difficulty/silent defects in interpreting it.
+            - Name: id_str
               Type: string
-            - Name: in_reply_to_screen_name
+              Comment: The string representation of the unique identifier for this Tweet. Implementations should use this rather than the large integer in id.
+            - Name: text
               Type: string
-            - Name: is_quote_status
+              Comment: The actual UTF-8 text of the status update. See twitter-text for details on what characters are currently considered valid.
+            - Name: source
+              Type: string
+              Comment: Utility used to post the Tweet, as an HTML-formatted string. Tweets from the Twitter website have a source value of web.
+            - Name: truncated
               Type: boolean
+              Comment: Indicates whether the value of the text parameter was truncated, for example, as a result of a retweet exceeding the original Tweet text length limit of 140 characters.
+            - Name: in_reply_to_status_id
+              Type: bigint
+              Comment: Nullable. If the represented Tweet is a reply, this field will contain the integer representation of the original Tweet’s ID.
+            - Name: in_reply_to_status_id_str
+              Type: string
+              Comment: Nullable. If the represented Tweet is a reply, this field will contain the string representation of the original Tweet’s ID.
+            - Name: in_reply_to_user_id
+              Type: bigint
+              Comment: Nullable. If the represented Tweet is a reply, this field will contain the integer representation of the original Tweet’s author ID. This will not necessarily always be the user directly mentioned in the Tweet.
             - Name: in_reply_to_user_id_str
               Type: string
+              Comment: Nullable. If the represented Tweet is a reply, this field will contain the string representation of the original Tweet’s author ID. This will not necessarily always be the user directly mentioned in the Tweet.
+            - Name: in_reply_to_screen_name
+              Type: string
+              Comment: Nullable. If the represented Tweet is a reply, this field will contain the screen name of the original Tweet’s author.
             - Name: user
               Type: struct<id:bigint,id_str:string,name:string,screen_name:string,location:string,url:string,description:string,translator_type:string,protected:boolean,verified:boolean,followers_count:bigint,friends_count:bigint,listed_count:bigint,favourites_count:bigint,statuses_count:bigint,created_at:string,utc_offset:bigint,time_zone:string,geo_enabled:boolean,lang:string,contributors_enabled:boolean,is_translator:boolean,profile_background_color:string,profile_background_image_url:string,profile_background_image_url_https:string,profile_background_tile:boolean,profile_link_color:string,profile_sidebar_border_color:string,profile_sidebar_fill_color:string,profile_text_color:string,profile_use_background_image:boolean,profile_image_url:string,profile_image_url_https:string,profile_banner_url:string,default_profile:boolean,default_profile_image:boolean>
+              Comment: The user who posted this Tweet. See User data dictionary for complete list of attributes.
+            - Name: coordinates
+              Type: struct<type:string,coordinates:array<double>>
+              Comment: Nullable. Represents the geographic location of this Tweet as reported by the user or client application. The inner coordinates array is formatted as geoJSON (longitude first, then latitude).
+            - Name: place
+              Type: struct<id:string,url:string,place_type:string,name:string,full_name:string,country_code:string,country:string,bounding_box:struct<type:string,coordinates:array<array<array<float>>>>>
+              Comment: Nullable When present, indicates that the tweet is associated (but not necessarily originating from) a Place .
+            - Name: quoted_status_id
+              Type: bigint
+              Comment: This field only surfaces when the Tweet is a quote Tweet. This field contains the integer value Tweet ID of the quoted Tweet.
+            - Name: quoted_status_id_str
+              Type: string
+              Comment: This field only surfaces when the Tweet is a quote Tweet. This is the string representation Tweet ID of the quoted Tweet.
+            - Name: is_quote_status
+              Type: boolean
+              Comment: Indicates whether this is a Quoted Tweet.
+            - Name: quoted_status
+              Type: string
+              Comment: This field only surfaces when the Tweet is a quote Tweet. This attribute contains the Tweet object of the original Tweet that was quoted.
+            - Name: retweeted_status
+              Type: string
+              Comment: Retweets can be distinguished from typical Tweets by the existence of a retweeted_status attribute. This attribute contains a representation of the original Tweet that was retweeted.
             - Name: quote_count
               Type: bigint
-        Parameters: {'classification': 'json'}
+              Comment: Nullable. Indicates approximately how many times this Tweet has been quoted by Twitter users.
+            - Name: reply_count
+              Type: bigint
+              Comment: Number of times this Tweet has been replied to.
+            - Name: retweet_count
+              Type: bigint
+              Comment: Number of times this Tweet has been retweeted.
+            - Name: favorite_count
+              Type: bigint
+              Comment: Nullable. Indicates approximately how many times this Tweet has been liked by Twitter users.
+            - Name: entities
+              Type: struct<hashtags:array<struct<text:string,indices:array<bigint>>>,urls:array<struct<url:string,expanded_url:string,display_url:string,indices:array<bigint>>>>
+              Comment: Entities which have been parsed out of the text of the Tweet. Additionally see Entities in Twitter Objects .
+            - Name: favorited
+              Type: boolean
+              Comment: Nullable. Indicates whether this Tweet has been liked by the authenticating user.
+            - Name: retweeted
+              Type: boolean
+              Comment: Indicates whether this Tweet has been Retweeted by the authenticating user.
+            - Name: possibly_sensitive
+              Type: boolean
+              Comment: Nullable. This field only surfaces when a Tweet contains a link. The meaning of the field doesn’t pertain to the Tweet content itself, but instead it is an indicator that the URL may contain content or media identified as sensitive content.
+            - Name: filter_level
+              Type: string
+              Comment: Indicates the maximum value of the filter_level parameter which may be used and still stream this Tweet. So a value of medium will be streamed on none, low, and medium streams.
+            - Name: lang
+              Type: string
+              Comment: Nullable. When present, indicates a BCP 47 language identifier corresponding to the machine-detected language of the Tweet text, or und if no language could be detected. See more documentation HERE.
+            - Name: timestamp_ms
+              Type: timestamp
+            - Name: geo
+              Type: struct<type:string,coordinates:array<double>>
+              Comment: Deprecated.
+        Parameters:
+          classification: json
 
   Elasticsearch:
     Type: AWS::Serverless::Application
