--- a/nested-stack/datalake.yaml
+++ b/nested-stack/datalake.yaml
@@ -1,20 +1,14 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'Data Lake'
-
-Metadata:
-  AWS::CloudFormation::Interface:
-    ParameterGroups:
-      - Label:
-          default: Data Lake Configuration
-        Parameters:
-          - TweetStreamArn
+Description: '[Social Media Dashboard] DataLake Stack'
 
 Parameters:
+
+  ParentStackName:
+    Type: String
+
   TweetStreamArn:
     Description: Source Kinesis Data Stream
     Type: String
-
-Conditions: {}
 
 Resources:
 
@@ -467,7 +461,7 @@ Resources:
       Command:
         Name: gluestreaming
         PythonVersion: 3
-        ScriptLocation: ../datalake/glue-scripts/tweet-archive-streaming.py
+        ScriptLocation: ../source/glue-scripts/tweet-archive-streaming.py
       DefaultArguments:
         "--TempDir": !Sub "s3://aws-glue-temporary-${AWS::AccountId}-${AWS::Region}/${AWS::StackName}"
         "--enable-continuous-cloudwatch-log": "true"
@@ -491,7 +485,7 @@ Resources:
       Command:
         Name: glueetl
         PythonVersion: 3
-        ScriptLocation: ../datalake/glue-scripts/tweet-transform-groundtruth.py
+        ScriptLocation: ../source/glue-scripts/tweet-transform-groundtruth.py
       DefaultArguments:
         "--TempDir": !Sub "s3://aws-glue-temporary-${AWS::AccountId}-${AWS::Region}/${AWS::StackName}"
         "--enable-continuous-cloudwatch-log": "true"
@@ -508,10 +502,5 @@ Resources:
 
 Outputs:
 
-  S3ConsoleURL:
-    Description: URL to the Lambda Function console
-    Value: !Sub 'https://s3.console.aws.amazon.com/s3/buckets/${Bucket}/?region=${AWS::Region}&tab=overview'
-
-  TwitterRawLocation:
-    Description: S3 Twitter Raw location.
-    Value: !Sub 's3://${Bucket}/raw/'
+  Bucket:
+    Value: !Ref Bucket
